refactor  Introduction